# MulleObjCContainerFoundation

./: .gitignore  .touch  .travis.yml  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  MulleObjCContainerFoundation.sublime-project  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle-env/etc/: environment-user-nat.sh
.mulle-env/share/: environment-project.sh
.mulle-sde/share/: extension
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh  environment-user-nat.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-project.sh  optionaltool  tool-extension
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
asset/dox/: TOC.md
assets/dox/: TOC.md
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CreateDepsIncObjC.cmake  CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake
cola/: add.md.bud  api.md.bud  description.md.bud  properties.plist
dox/: HOWTO_CODE.md  HOWTO_DEPENDENCIES.md  MulleObjCStandardFoundation-dependencies.dot  libraries.dot
mulle-project/: version-info.sh
src/: CONTAINER_README.md  Info.plist  MulleObjCContainer.h  MulleObjCContainer.m  MulleObjCContainerFoundation.h  MulleObjCContainerObjectCallback.h  MulleObjCContainerObjectCallback.m  MulleObjCDeps+MulleObjCContainerFoundation.h  MulleObjCDeps+MulleObjCContainerFoundation.m  MulleObjCLoader+Foundation.h  MulleObjCLoader+MulleObjCContainerFoundation.h  MulleObjCLoader+MulleObjCContainerFoundation.m  MulleObjCLoader+MulleObjCStandardFoundation.h  MulleObjCLoader+MulleObjCStandardFoundation.m  NSEnumerator.h  NSEnumerator.m  SUBCLASSING.md  SUBCLASSING.txt  _MulleObjCContainerFoundation-import-private.h  _MulleObjCContainerFoundation-import.h  _MulleObjCContainerFoundation-include-private.h  _MulleObjCContainerFoundation-include.h  dependencies.inc  import-private.h  import.h  include-private.h  include.h  objc-loader.inc
src/Container/: MulleObjCFoundationContainer.h  MullePreempt.h  NSEnumerator.h  NSEnumerator.m
src/Container/NSArray/: NSArray+Private.h  NSArray-Private.h  NSArray.h  NSArray.m  NSEnumerator+NSArray.h  NSEnumerator+NSArray.m  NSMutableArray.h  NSMutableArray.m  _MulleObjCEmptyArray.h  (+12 more)
src/KVC/: NSArray+NSSortDescriptor.h
src/NSArray/: MulleObjCContainer+NSArray.h  MulleObjCContainer+NSArray.m  NSArray+NSCoder.h  NSArray+NSCoder.m  NSArray+NSEnumerator.h  NSArray+NSEnumerator.m  NSArray-Private.h  NSArray.h  NSArray.m  NSEnumerator+NSArray.h  NSEnumerator+NSArray.m  NSMutableArray+NSSet.h  NSMutableArray+NSSet.m  NSMutableArray.h  NSMutableArray.m  _MulleObjCArrayEnumerator.h  _MulleObjCArrayEnumerator.m  _MulleObjCConcreteArray-Private.h  _MulleObjCConcreteArray.h  _MulleObjCConcreteArray.m  _MulleObjCEmptyArray.h  _MulleObjCEmptyArray.m  _NSArrayPlaceholder.h  _NSArrayPlaceholder.m  mulle-qsort-pointers.c  mulle-qsort-pointers.h
src/NSDictionary/: NSDictionary+NSArray.h  NSDictionary+NSArray.m  NSDictionary+NSCoder.h  NSDictionary+NSCoder.m  NSDictionary+NSEnumerator.h  NSDictionary+NSEnumerator.m  NSDictionary.h  NSDictionary.m  NSMutableDictionary+NSArray.h  NSMutableDictionary+NSArray.m  NSMutableDictionary.h  NSMutableDictionary.m  NSThread+NSMutableDictionary.h  NSThread+NSMutableDictionary.m  _MulleObjCConcreteDictionary.h  _MulleObjCConcreteDictionary.m  _MulleObjCConcreteMutableDictionary.h  _MulleObjCConcreteMutableDictionary.m  _MulleObjCDictionary-Private.h  _MulleObjCDictionary.h  _MulleObjCDictionary.m  _MulleObjCEmptyDictionary.h  _MulleObjCEmptyDictionary.m  _NSDictionaryPlaceholder.h  _NSDictionaryPlaceholder.m  _NSMutableDictionaryPlaceholder.h  _NSMutableDictionaryPlaceholder.m  ns-map-table.h  ns-map-table.m
src/NSSet/: NSMutableSet+NSArray.h  NSMutableSet+NSArray.m  NSMutableSet.h  NSMutableSet.m  NSSet+NSArray.h  NSSet+NSArray.m  NSSet+NSCoder.h  NSSet+NSCoder.m  NSSet.h  NSSet.m  _MulleObjCConcreteMutableSet.h  _MulleObjCConcreteMutableSet.m  _MulleObjCConcreteSet.h  _MulleObjCConcreteSet.m  _MulleObjCEmptySet.h  _MulleObjCEmptySet.m  _MulleObjCSet-Private.h  _MulleObjCSet.h  _MulleObjCSet.m  _NSMutableSetPlaceholder.h  _NSMutableSetPlaceholder.m  _NSSetPlaceholder.h  _NSSetPlaceholder.m  ns-hash-table.h  ns-hash-table.m
src/String/: _NSConstantString.m
src/Value/: NSValue+Private.h
src/generic/: import-private.h  import.h  include-private.h  include.h
src/reflect/: _MulleObjCContainerFoundation-export.h  _MulleObjCContainerFoundation-import-private.h  _MulleObjCContainerFoundation-import.h  _MulleObjCContainerFoundation-include-private.h  _MulleObjCContainerFoundation-include.h  _MulleObjCContainerFoundation-provide.h  _MulleObjCContainerFoundation-versioncheck.h  objc-loader.inc
test/: README.md  coverage.json  import.h  include.h
test/00_noleak/: noleak.m
test/10_array/: array-advanced.m  array-advanced.stdout  array-basics.m  array-basics.stdout  array-enumeration.m  array-enumeration.stdout  array-makeperform.m  array-makeperform.stdout  array-range-ops.m  array-range-ops.stdout  init-objects.m  mutable-array-advanced.m  mutable-array-advanced.stdout  mutable-array-range.m  mutable-array-range.stdout  mutable-array.m  mutable-array.stdout  remove-objects.m
test/20_dictionary/: dict-advanced.m  dict-advanced.stdout  dict-basics.m  dict-basics.stdout  dict-enumerate.m  dict-enumerate.stdout  mutable-dict-advanced.m  mutable-dict-advanced.stdout  mutable-dict.m  mutable-dict.stdout  remove-objects.m  thread-dict.m  thread-dict.stdout
test/30_set/: mutable-set-ops.m  mutable-set-ops.stdout  mutable-set.m  mutable-set.stdout  set-advanced.m  set-advanced.stdout  set-basics.m  set-basics.stdout  set-ops.m  set-ops.stdout
test/40_c_tables/: hash-table.m  hash-table.stdout  map-table.m  map-table.stdout
(+59 files in other folders)
